# rompy-swan

./: .buildinfo  .gitignore  404.html  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  genindex.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements_dev.txt  search.html  searchindex.js  setup.cfg  sitemap.xml  tbump.toml  tox.ini  types.html
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-docs.yml  python-publish.yml
_generated/: rompy_swan.boundary.Boundnest1.html  rompy_swan.data.SwanDataGrid.html  rompy_swan.grid.SwanGrid.html  rompy_swan.interface.BoundaryInterface.html  rompy_swan.interface.DataInterface.html  rompy_swan.interface.LockupInterface.html  rompy_swan.interface.OutputInterface.html  rompy_swan.types.BlockOptions.html  rompy_swan.types.BoundShapeOptions.html  rompy_swan.types.GridOptions.html  rompy_swan.types.IDLA.html  rompy_swan.types.PhysicsOff.html  rompy_swan.types.SideOptions.html
_modules/: index.html
_modules/rompy_swan/: boundary.html  config.html  data.html  grid.html  interface.html  types.html
_sources/_generated/: rompy_swan.boundary.Boundnest1.rst.txt  rompy_swan.data.SwanDataGrid.rst.txt  rompy_swan.grid.SwanGrid.rst.txt  rompy_swan.interface.BoundaryInterface.rst.txt  rompy_swan.interface.DataInterface.rst.txt  rompy_swan.interface.LockupInterface.rst.txt  rompy_swan.interface.OutputInterface.rst.txt  rompy_swan.types.BlockOptions.rst.txt  rompy_swan.types.GridOptions.rst.txt  (+4 more)
components/: boundary.html  cgrid.html  group.html  index.html  inpgrid.html  lockup.html  numerics.html  output.html  physics.html  startup.html
contributing/: index.html
data-interfaces/: index.html
docs/: contributing.md  index.md  installation.md  types.md  usage.md
examples/: example_declarative.yml  index.html
installation/: index.html
search/: search_index.json
subcomponents/: base.html  boundary.html  cgrid.html  numerics.html  output.html  physics.html  readgrid.html  spectrum.html  startup.html  time.html
tests/: test_deprecation.py  test_model_containers.py  test_swan_config.py  test_swan_model.py  test_swan_types.py
types/: index.html
usage/: index.html
(+590 files in other folders)
