[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "rompy-swan"
description = "SWAN wave model plugin for rompy"
readme = "README.md"
authors = [
  {name = "Rompy Contributors", email = "developers@rompy.com"}
]
maintainers = [
  {name = "Rompy Contributors", email = "developers@rompy.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = {text = "Apache Software License 2.0"}
requires-python = ">=3.10"
dependencies = [
    "rompy>=0.6",
    "pydantic>2",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "pytest",
    "ruff",
    "requests",
    "envyaml"
]
test = [
    "pytest",
    "coverage",
    "requests",
    "envyaml"
]
docs = [
    "autodoc_pydantic",
    "ipython",
    "nbsphinx",
    "pydata_sphinx_theme",
    "sphinx<7.3.6",
    "sphinx-collections",
]

[project.entry-points."rompy.config"]
swan_components = "rompy_swan.config:SwanConfigComponents"

[project.urls]
bugs = "https://github.com/rom-py/rompy-swan/issues"
changelog = "https://github.com/rom-py/rompy-swan/blob/master/changelog.md"
homepage = "https://github.com/rom-py/rompy-swan"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.y*ml", "*.csv", "*.html"]

[tool.setuptools.dynamic]
version = {attr = "rompy_swan.__version__"}

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 88
